--- a/setting.ini
+++ b/setting.ini
@@ -36,34 +36,40 @@ BackgroudColor = )0, 0, 0)
 ForegroudColor = (63, 63, 63)
 IdleTime = 1
 
+[CalendarBlock]
+FontSize = 150
+FontName = Helvetica
+FontBold = yes
+FontItalic = no
+Position = 80
+
 [TimeBlock]
-FontName = "Helvetica"
+FontName = Helvetica
 FontSize = 384
+FontBold = yes
+FontItalic = no
 
 [VoiceBlock]
-#jane,omazh,zahar,ermil.
+#•женские голоса jane, oksana, alyss и omazh
+#•мужские голоса zahar и ermil
 Speaker = omazh
 Key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 
-[CalendarBlock]
-FontSize = 150
-FontName = "Helvetica"
-Position = 80
-
-
 [YandexNewsBlock]
+UpdateTime = 15 
 Url = https://news.yandex.ru/index.rss
-Length = 5
+Position = 720
+Indent = 16
+Rows = 5
+
 FontSize = 34
 FontName = Helvetica
-Position = 720
-Line = 16
-UpdateTime = 15 
-
+FontBold = no
+FontItalic = no
 
 [OpenWeatherMapBlock]
-Key = b5561ca2d2e87158e97b7333779623f8
 UpdateTime = 15
+Key = b5561ca2d2e87158e97b7333779623f8
 Folder = Images
 
 IconScale = (256, 256)
@@ -86,3 +92,15 @@ TemperatureFontSize = 160
 HumidityFontSize = 64
 PressureFontSize = 64
 WindFontSize = 64
+
+WeatherTypeFontBold = yes
+TemperatureFontBold = yes
+HumidityFontBold = no
+PressureFontBold = no
+WindFontBold = no
+
+WeatherTypeFontItalic = no
+TemperatureFontItalic = no
+HumidityFontItalic = no
+PressureFontItalic = no
+WindFontItalic = no
