--- a/setting.ini
+++ b/setting.ini
@@ -32,7 +32,7 @@ IdleTime = 10
 
 [SCHEMA_NIGHT_2]
 StartTime = 23:00:00
-BackgroudColor = )0, 0, 0)
+BackgroudColor = (0, 0, 0)
 ForegroudColor = (63, 63, 63)
 IdleTime = 1
 
@@ -104,3 +104,27 @@ TemperatureFontItalic = no
 HumidityFontItalic = no
 PressureFontItalic = no
 WindFontItalic = no
+
+[AlarmBlock]
+List = Alarm1, Alarm2,  Alarm3
+
+[Alarm1]
+Time = 16:35:00
+Type = 1
+Duration = 5
+BackgroudColor = (255, 0, 0)
+ForegroudColor = (255, 255, 255)
+
+[Alarm2]
+Time = 16:35:10
+Type = 1
+Duration = 5
+BackgroudColor = (0, 255, 0)
+ForegroudColor = (255, 255, 255)
+
+[Alarm3]
+Time = 16:35:20
+Type = 1
+Duration = 5
+BackgroudColor = (0, 0, 255)
+ForegroudColor = (255, 255, 255)
