--- a/setting.ini
+++ b/setting.ini
@@ -1,4 +1,4 @@
-[DEFAULT]
+[MAIN]
 BackgroudColor = (0, 0, 0)
 ForegroudColor = (64, 64, 64)
 IdleTime = 5
@@ -109,22 +109,22 @@ WindFontItalic = no
 List = Alarm1, Alarm2,  Alarm3
 
 [Alarm1]
-Time = 16:35:00
+Time = 19:00:00
 Type = 1
 Duration = 5
 BackgroudColor = (255, 0, 0)
 ForegroudColor = (255, 255, 255)
 
 [Alarm2]
-Time = 16:35:10
+Time = 19:00:10
 Type = 1
 Duration = 5
 BackgroudColor = (0, 255, 0)
 ForegroudColor = (255, 255, 255)
 
 [Alarm3]
-Time = 16:35:20
-Type = 1
+Time = 19:00:20
+Type = 2
 Duration = 5
 BackgroudColor = (0, 0, 255)
 ForegroudColor = (255, 255, 255)
