--- a/setting.ini
+++ b/setting.ini
@@ -1,6 +1,6 @@
 [MAIN]
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (64, 64, 64)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (64, 64, 64)
 IdleTime = 5
 
 [TIMELINE]
@@ -8,32 +8,32 @@ Sections = SCHEMA_NIGHT_1,SCHEMA_MORNING,SCHEMA_DAY,SCHEMA_EVENING,SCHEMA_NIGHT_
 
 [SCHEMA_NIGHT_1]
 StartTime = 0:00:00
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (63, 63, 63)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (63, 63, 63)
 IdleTime = 1
 
 [SCHEMA_MORNING]
 StartTime = 7:00:00
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (127, 127, 127)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (127, 127, 127)
 IdleTime = 10
 
 [SCHEMA_DAY]
 StartTime = 10:00:00
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (255, 255, 255)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (255, 255, 255)
 IdleTime = 30
 
 [SCHEMA_EVENING]
 StartTime = 18:00:00
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (127, 127, 127)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (127, 127, 127)
 IdleTime = 10
 
 [SCHEMA_NIGHT_2]
 StartTime = 23:00:00
-BackgroudColor = (0, 0, 0)
-ForegroudColor = (63, 63, 63)
+BackgroundColor = (0, 0, 0)
+ForegroundColor = (63, 63, 63)
 IdleTime = 1
 
 [CalendarBlock]
@@ -106,25 +106,19 @@ PressureFontItalic = no
 WindFontItalic = no
 
 [AlarmBlock]
-List = Alarm1, Alarm2,  Alarm3
+List = Alarm1, Alarm2
 
 [Alarm1]
-Time = 19:00:00
+Time = 7:30:00
 Type = 1
 Duration = 5
-BackgroudColor = (255, 0, 0)
-ForegroudColor = (255, 255, 255)
+BackgroundColor = (255, 0, 0)
+ForegroundColor = (255, 255, 255)
 
 [Alarm2]
-Time = 19:00:10
-Type = 1
-Duration = 5
-BackgroudColor = (0, 255, 0)
-ForegroudColor = (255, 255, 255)
-
-[Alarm3]
-Time = 19:00:20
+Time = 8:00:00
 Type = 2
 Duration = 5
-BackgroudColor = (0, 0, 255)
-ForegroudColor = (255, 255, 255)
+BackgroundColor = (0, 0, 255)
+ForegroundColor = (255, 255, 255)
+
