--- a/setting.ini
+++ b/setting.ini
@@ -106,19 +106,11 @@ PressureFontItalic = no
 WindFontItalic = no
 
 [AlarmBlock]
-List = Alarm1, Alarm2
+List = Alarm1
 
 [Alarm1]
-Time = 7:30:00
-Type = 1
+Time = 11:38:10
+Type = 2
 Duration = 5
 BackgroundColor = (255, 0, 0)
 ForegroundColor = (255, 255, 255)
-
-[Alarm2]
-Time = 8:00:00
-Type = 2
-Duration = 5
-BackgroundColor = (0, 0, 255)
-ForegroundColor = (255, 255, 255)
-
