--- a/setting.ini
+++ b/setting.ini
@@ -109,7 +109,9 @@ WindFontItalic = no
 List = Alarm1
 
 [Alarm1]
-Time = 11:38:10
+Time = 12:51:10
+# 0 - Monday, 1 - Tuesday, 2 - Wednesday, 3 = Thursday, 4 = Saturday, 5 = Friday, 6 = Sunday
+WeekDay = 0, 1, 2, 3, 4
 Type = 2
 Duration = 5
 BackgroundColor = (255, 0, 0)
