--- a/setting.ini
+++ b/setting.ini
@@ -1,121 +1,112 @@
-[MAIN]
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (64, 64, 64)
-IdleTime = 5
-
-[TIMELINE]
-Sections = SCHEMA_NIGHT_1,SCHEMA_MORNING,SCHEMA_DAY,SCHEMA_EVENING,SCHEMA_NIGHT_2
-
-[SCHEMA_NIGHT_1]
-StartTime = 0:00:00
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (63, 63, 63)
-IdleTime = 1
-
-[SCHEMA_MORNING]
-StartTime = 7:00:00
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (127, 127, 127)
-IdleTime = 10
-
-[SCHEMA_DAY]
-StartTime = 10:00:00
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (255, 255, 255)
-IdleTime = 30
-
-[SCHEMA_EVENING]
-StartTime = 18:00:00
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (127, 127, 127)
-IdleTime = 10
-
-[SCHEMA_NIGHT_2]
-StartTime = 23:00:00
-BackgroundColor = (0, 0, 0)
-ForegroundColor = (63, 63, 63)
-IdleTime = 1
-
-[CalendarBlock]
-FontName = Helvetica
-FontSize = 150
-FontBold = yes
-FontItalic = no
-Position = 80
-
-[TimeBlock]
-FontName = Helvetica
-FontSize = 384
-FontBold = yes
-FontItalic = no
-
-[VoiceBlock]
-#•женские голоса jane, oksana, alyss и omazh
-#•мужские голоса zahar и ermil
-Speaker = omazh
-Key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
-
-[YandexNewsBlock]
-UpdateTime = 15 
-Url = https://news.yandex.ru/index.rss
-Position = 720
-Indent = 16
-Rows = 5
-
-FontName = Helvetica
-FontSize = 34
-FontBold = no
-FontItalic = no
-
-[OpenWeatherMapBlock]
-UpdateTime = 15
-Key = b5561ca2d2e87158e97b7333779623f8
-Folder = Images
-
-IconScale = (256, 256)
-IconPos = (0, 0)
-
-WeatherTypePos = (260, 242)
-TemperaturePos = (240, 50)
-HumidityPos = (620, 98)
-PressurePos = (620, 170)
-WindPos = (620, 26)
-
-WeatherTypeFontName = Helvetica
-TemperatureFontName = Helvetica
-HumidityFontName = Helvetica
-PressureFontName = Helvetica
-WindFontName = Helvetica
-
-WeatherTypeFontSize = 64
-TemperatureFontSize = 160
-HumidityFontSize = 64
-PressureFontSize = 64
-WindFontSize = 64
-
-WeatherTypeFontBold = yes
-TemperatureFontBold = yes
-HumidityFontBold = no
-PressureFontBold = no
-WindFontBold = no
-
-WeatherTypeFontItalic = no
-TemperatureFontItalic = no
-HumidityFontItalic = no
-PressureFontItalic = no
-WindFontItalic = no
-
 [AlarmBlock]
-List = Alarm1
+list = Alarm1
 
 [Alarm1]
-Time = 11:08:00
-# 0 - Monday, 1 - Tuesday, 2 - Wednesday, 3 = Thursday, 4 = Saturday, 5 = Friday, 6 = Sunday
-WeekDay = 0, 1, 2, 3, 4
-Type = 3
-Duration = 10
-BackgroundColor = (255, 0, 0)
-ForegroundColor = (255, 255, 255)
+type = 3
+time = 11:08:00
+weekday = 0, 1, 2, 3, 4
+duration = 10
+backgroundcolor = (255, 0, 0)
+foregroundcolor = (255, 255, 255)
+
+[VoiceBlock]
+speaker = omazh
+key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
+
+[MAIN]
+idletime = 5
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (64, 64, 64)
+
+[TIMELINE]
+sections = SCHEMA_NIGHT_1, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_MORNING, SCHEMA_NIGHT_2
+
+[SCHEMA_NIGHT_1]
+starttime = 00:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[SCHEMA_DAY]
+starttime = 10:00:00
+idletime = 30
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (255, 255, 255)
+
+[SCHEMA_EVENING]
+starttime = 18:00:00
+idletime = 10
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (127, 127, 127)
+
+[SCHEMA_MORNING]
+starttime = 07:00:00
+idletime = 10
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (127, 127, 127)
+
+[SCHEMA_NIGHT_2]
+starttime = 23:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[TimeBlock]
+fontname = Helvetica
+fontsize = 384
+fontbold = 1
+fontitalic = 0
+
+[OpenWeatherMapBlock]
+updatetime = 15
+key = b5561ca2d2e87158e97b7333779623f8
+folder = Images
+iconscale = (256,256)
+iconpos = (0,0)
+weathertypepos = (260,242)
+temperaturepos = (240,50)
+humiditypos = (620,98)
+pressurepos = (620,170)
+windpos = (620,26)
+weathertypefontname = Helvetica
+weathertypefontsize = 64
+weathertypefontbold = 1
+weathertypefontitalic = 0
+temperaturefontname = Helvetica
+temperaturefontsize = 160
+temperaturefontbold = 1
+temperaturefontitalic = 0
+humidityfontname = Helvetica
+humidityfontsize = 64
+humidityfontbold = 0
+humidityfontitalic = 0
+pressurefontname = Helvetica
+pressurefontsize = 64
+pressurefontbold = 0
+pressurefontitalic = 0
+windfontname = Helvetica
+windfontsize = 64
+windfontbold = 0
+windfontitalic = 0
 
 [SwapBlock]
-UpdateTime = 15
+updatetime = 10
+
+[CalendarBlock]
+fontname = Helvetica
+fontsize = 150
+fontbold = 1
+fontitalic = 0
+position = 80
+
+[YandexNewsBlock]
+fontname = Helvetica
+fontsize = 34
+fontbold = 0
+fontitalic = 0
+url = https://news.yandex.ru/index.rss
+updatetime = 15
+position = 720
+indent = 16
+rows = 5
+
