--- a/setting.ini
+++ b/setting.ini
@@ -1,9 +1,58 @@
+[AlarmBlock]
+list = Alarm1
+
+[Alarm1]
+type = 3
+time = 08:00:00
+weekday = 0, 1, 2, 3, 4
+duration = 10
+backgroundcolor = (255, 0, 0)
+foregroundcolor = (255, 255, 255)
+
 [CalendarBlock]
 fontname = Helvetica
 fontsize = 120
 fontbold = 1
 fontitalic = 0
 position = 80
+
+[MAIN]
+idletime = 5
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (64, 64, 64)
+
+[TIMELINE]
+sections = SCHEMA_NIGHT_2, SCHEMA_EVENING, SCHEMA_DAY, SCHEMA_NIGHT_1, SCHEMA_MORNING
+
+[SCHEMA_NIGHT_2]
+starttime = 23:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[SCHEMA_EVENING]
+starttime = 18:00:00
+idletime = 10
+backgroundcolor = (59, 94, 128)
+foregroundcolor = (255, 255, 255)
+
+[SCHEMA_DAY]
+starttime = 10:00:00
+idletime = 30
+backgroundcolor = (10, 210, 210)
+foregroundcolor = (255, 255, 255)
+
+[SCHEMA_NIGHT_1]
+starttime = 00:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[SCHEMA_MORNING]
+starttime = 07:00:00
+idletime = 10
+backgroundcolor = (59, 94, 128)
+foregroundcolor = (255, 255, 255)
 
 [OpenWeatherMapBlock]
 updatetime = 15
@@ -37,9 +86,8 @@ windfontsize = 64
 windfontbold = 0
 windfontitalic = 0
 
-[VoiceBlock]
-speaker = omazh
-key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
+[SwapBlock]
+updatetime = 10
 
 [TimeBlock]
 fontname = Helvetica
@@ -47,57 +95,9 @@ fontsize = 384
 fontbold = 1
 fontitalic = 0
 
-[AlarmBlock]
-list = Alarm1
-
-[Alarm1]
-type = 3
-time = 08:00:00
-weekday = 0, 1, 2, 3, 4
-duration = 10
-backgroundcolor = (255, 0, 0)
-foregroundcolor = (255, 255, 255)
-
-[MAIN]
-idletime = 5
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (64, 64, 64)
-
-[TIMELINE]
-sections = SCHEMA_MORNING, SCHEMA_EVENING, SCHEMA_NIGHT_2, SCHEMA_DAY, SCHEMA_NIGHT_1
-
-[SCHEMA_MORNING]
-starttime = 07:00:00
-idletime = 10
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (127, 127, 127)
-
-[SCHEMA_EVENING]
-starttime = 18:00:00
-idletime = 10
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (127, 127, 127)
-
-[SCHEMA_NIGHT_2]
-starttime = 23:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
-
-[SCHEMA_DAY]
-starttime = 10:00:00
-idletime = 30
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (255, 255, 255)
-
-[SCHEMA_NIGHT_1]
-starttime = 00:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
-
-[SwapBlock]
-updatetime = 10
+[VoiceBlock]
+speaker = omazh
+key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 
 [YandexNewsBlock]
 fontname = Helvetica
