--- a/setting.ini
+++ b/setting.ini
@@ -110,3 +110,34 @@ position = 720
 indent = 16
 rows = 5
 
+[WunderGroundBlock]
+updatetime = 15
+key = 37caca524bc00656
+folder = Images
+iconscale = (220,220)
+iconpos = (0,0)
+weathertypepos = (260,242)
+temperaturepos = (240,50)
+humiditypos = (620,98)
+pressurepos = (620,170)
+windpos = (620,26)
+weathertypefontname = Helvetica
+weathertypefontsize = 64
+weathertypefontbold = 1
+weathertypefontitalic = 0
+temperaturefontname = Helvetica
+temperaturefontsize = 160
+temperaturefontbold = 1
+temperaturefontitalic = 0
+humidityfontname = Helvetica
+humidityfontsize = 64
+humidityfontbold = 0
+humidityfontitalic = 0
+pressurefontname = Helvetica
+pressurefontsize = 64
+pressurefontbold = 0
+pressurefontitalic = 0
+windfontname = Helvetica
+windfontsize = 64
+windfontbold = 0
+windfontitalic = 0
