--- a/setting.ini
+++ b/setting.ini
@@ -57,7 +57,7 @@ foregroundcolor = (255, 255, 255)
 [OpenWeatherMapBlock]
 updatetime = 15
 key = b5561ca2d2e87158e97b7333779623f8
-folder = Images
+folder = weather
 iconscale = (256,256)
 iconpos = (0,0)
 weathertypepos = (260,242)
@@ -113,7 +113,7 @@ rows = 5
 [WunderGroundBlock]
 updatetime = 15
 key = 37caca524bc00656
-folder = Images
+folder = weather
 iconscale = (220,220)
 iconpos = (0,0)
 weathertypepos = (260,242)
