--- a/setting.ini
+++ b/setting.ini
@@ -22,7 +22,13 @@ backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
 
 [TIMELINE]
-sections = SCHEMA_NIGHT_2, SCHEMA_EVENING, SCHEMA_DAY, SCHEMA_NIGHT_1, SCHEMA_MORNING
+sections = SCHEMA_EVENING, SCHEMA_NIGHT_2, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_NIGHT_1
+
+[SCHEMA_EVENING]
+starttime = 18:00:00
+idletime = 10
+backgroundcolor = (59, 94, 128)
+foregroundcolor = (255, 255, 255)
 
 [SCHEMA_NIGHT_2]
 starttime = 23:00:00
@@ -30,8 +36,8 @@ idletime = 1
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
 
-[SCHEMA_EVENING]
-starttime = 18:00:00
+[SCHEMA_MORNING]
+starttime = 07:00:00
 idletime = 10
 backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
@@ -47,12 +53,6 @@ starttime = 00:00:00
 idletime = 1
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
-
-[SCHEMA_MORNING]
-starttime = 07:00:00
-idletime = 10
-backgroundcolor = (59, 94, 128)
-foregroundcolor = (255, 255, 255)
 
 [OpenWeatherMapBlock]
 updatetime = 15
@@ -99,17 +99,6 @@ fontitalic = 0
 speaker = omazh
 key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 
-[YandexNewsBlock]
-fontname = Helvetica
-fontsize = 34
-fontbold = 0
-fontitalic = 0
-url = https://news.yandex.ru/index.rss
-updatetime = 15
-position = 720
-indent = 16
-rows = 5
-
 [WunderGroundBlock]
 updatetime = 15
 key = 37caca524bc00656
@@ -141,3 +130,15 @@ windfontname = Helvetica
 windfontsize = 64
 windfontbold = 0
 windfontitalic = 0
+
+[YandexNewsBlock]
+fontname = Helvetica
+fontsize = 34
+fontbold = 0
+fontitalic = 0
+url = https://news.yandex.ru/index.rss
+updatetime = 15
+position = 720
+indent = 16
+rows = 5
+
