--- a/setting.ini
+++ b/setting.ini
@@ -5,7 +5,7 @@ list = Alarm1
 type = 3
 time = 08:00:00
 weekday = 0, 1, 2, 3, 4
-duration = 10
+duration = 20
 backgroundcolor = (255, 0, 0)
 foregroundcolor = (255, 255, 255)
 
@@ -22,16 +22,16 @@ backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
 
 [TIMELINE]
-sections = SCHEMA_EVENING, SCHEMA_NIGHT_2, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_NIGHT_1
-
-[SCHEMA_EVENING]
-starttime = 18:00:00
-idletime = 10
-backgroundcolor = (59, 94, 128)
-foregroundcolor = (255, 255, 255)
+sections = SCHEMA_NIGHT_2, SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_EVENING, SCHEMA_DAY
 
 [SCHEMA_NIGHT_2]
 starttime = 23:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[SCHEMA_NIGHT_1]
+starttime = 00:00:00
 idletime = 1
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
@@ -42,17 +42,17 @@ idletime = 10
 backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
 
+[SCHEMA_EVENING]
+starttime = 18:00:00
+idletime = 10
+backgroundcolor = (59, 94, 128)
+foregroundcolor = (255, 255, 255)
+
 [SCHEMA_DAY]
 starttime = 10:00:00
 idletime = 30
 backgroundcolor = (10, 210, 210)
 foregroundcolor = (255, 255, 255)
-
-[SCHEMA_NIGHT_1]
-starttime = 00:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
 
 [OpenWeatherMapBlock]
 updatetime = 15
