--- a/setting.ini
+++ b/setting.ini
@@ -8,6 +8,7 @@ weekday = 0, 1, 2, 3, 4
 duration = 20
 backgroundcolor = (255, 0, 0)
 foregroundcolor = (255, 255, 255)
+file = /home/pi/DashBoard/music/happy three frend.mp3
 
 [CalendarBlock]
 fontname = Helvetica
@@ -22,19 +23,7 @@ backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
 
 [TIMELINE]
-sections = SCHEMA_NIGHT_2, SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_EVENING, SCHEMA_DAY
-
-[SCHEMA_NIGHT_2]
-starttime = 23:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
-
-[SCHEMA_NIGHT_1]
-starttime = 00:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
+sections = SCHEMA_MORNING, SCHEMA_EVENING, SCHEMA_NIGHT_1, SCHEMA_NIGHT_2, SCHEMA_DAY
 
 [SCHEMA_MORNING]
 starttime = 07:00:00
@@ -47,6 +36,18 @@ starttime = 18:00:00
 idletime = 10
 backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
+
+[SCHEMA_NIGHT_1]
+starttime = 00:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
+
+[SCHEMA_NIGHT_2]
+starttime = 23:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
 
 [SCHEMA_DAY]
 starttime = 10:00:00
