--- a/setting.ini
+++ b/setting.ini
@@ -100,6 +100,10 @@ fontitalic = 0
 speaker = omazh
 key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 
+[WatcherBlock]
+updatetime = 1
+path = ~/webcam.sh
+
 [WunderGroundBlock]
 updatetime = 15
 key = 37caca524bc00656
