--- a/setting.ini
+++ b/setting.ini
@@ -101,8 +101,11 @@ speaker = omazh
 key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 
 [WatcherBlock]
-updatetime = 1
-path = ~/webcam.sh
+weekday = 0, 1, 2, 3, 4
+starttime = 09:00:00
+finishtime = 20:00:00
+updatetime = 5
+path = bash /home/pi/webcam.sh
 
 [WunderGroundBlock]
 updatetime = 15
