--- a/setting.ini
+++ b/setting.ini
@@ -105,7 +105,7 @@ weekday = 0, 1, 2, 3, 4
 starttime = 09:00:00
 finishtime = 20:00:00
 updatetime = 5
-path = bash /home/pi/webcam.sh
+path = bash /home/pi/DashBoard/webcam.sh
 
 [WunderGroundBlock]
 updatetime = 15
