--- a/setting.ini
+++ b/setting.ini
@@ -23,12 +23,24 @@ backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
 
 [TIMELINE]
-sections = SCHEMA_MORNING, SCHEMA_EVENING, SCHEMA_NIGHT_1, SCHEMA_NIGHT_2, SCHEMA_DAY
+sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
+
+[SCHEMA_NIGHT_1]
+starttime = 00:00:00
+idletime = 1
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (63, 63, 63)
 
 [SCHEMA_MORNING]
 starttime = 07:00:00
 idletime = 10
 backgroundcolor = (59, 94, 128)
+foregroundcolor = (255, 255, 255)
+
+[SCHEMA_DAY]
+starttime = 10:00:00
+idletime = 30
+backgroundcolor = (10, 210, 210)
 foregroundcolor = (255, 255, 255)
 
 [SCHEMA_EVENING]
@@ -37,23 +49,11 @@ idletime = 10
 backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
 
-[SCHEMA_NIGHT_1]
-starttime = 00:00:00
-idletime = 1
-backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
-
 [SCHEMA_NIGHT_2]
 starttime = 23:00:00
 idletime = 1
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
-
-[SCHEMA_DAY]
-starttime = 10:00:00
-idletime = 30
-backgroundcolor = (10, 210, 210)
-foregroundcolor = (255, 255, 255)
 
 [OpenWeatherMapBlock]
 updatetime = 15
