--- a/setting.ini
+++ b/setting.ini
@@ -1,5 +1,6 @@
 [AlarmBlock]
 list = Alarm1
+blocklist = Time, Swap, YandexNews
 
 [Alarm1]
 type = 3
@@ -89,6 +90,7 @@ windfontitalic = 0
 
 [SwapBlock]
 updatetime = 10
+blocklist = WunderGround, Calendar
 
 [TimeBlock]
 fontname = Helvetica
@@ -99,6 +101,7 @@ fontitalic = 0
 [VoiceBlock]
 speaker = omazh
 key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
+blocklist = Time, Swap, YandexNews
 
 [WatcherBlock]
 weekday = 0, 1, 2, 3, 4
