--- a/setting.ini
+++ b/setting.ini
@@ -22,6 +22,7 @@ position = 80
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
+blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
