--- a/setting.ini
+++ b/setting.ini
@@ -18,11 +18,15 @@ fontbold = 1
 fontitalic = 0
 position = 80
 
+[MT8057Block]
+green = 600
+yellow = 800
+
 [MAIN]
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
+blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm, MT8057
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
