--- a/setting.ini
+++ b/setting.ini
@@ -21,12 +21,22 @@ position = 80
 [MT8057Block]
 green = 600
 yellow = 800
+co2fontname = Helvetica
+co2fontsize = 64
+co2fontbold = 1
+co2fontitalic = 0
+tempfontname = Helvetica
+tempfontsize = 64
+tempfontbold = 1
+tempfontitalic = 0
+co2pos = (10,10)
+temppos = (500,10)
 
 [MAIN]
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm, MT8057
+blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -95,7 +105,7 @@ windfontitalic = 0
 
 [SwapBlock]
 updatetime = 10
-blocklist = WunderGround, Calendar
+blocklist = WunderGround, Calendar, MT8057
 
 [TimeBlock]
 fontname = Helvetica
