--- a/setting.ini
+++ b/setting.ini
@@ -19,8 +19,10 @@ fontitalic = 0
 position = 80
 
 [MT8057Block]
-green = 600
-yellow = 800
+warn = 800
+crit = 1200
+warncolor = (255, 127, 0)
+critcolor = (255, 63, 63)
 co2fontname = Helvetica
 co2fontsize = 100
 co2fontbold = 1
