--- a/setting.ini
+++ b/setting.ini
@@ -38,7 +38,7 @@ temppos = (130,180)
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
+blocklist = YandexWeather, Time
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -170,3 +170,36 @@ position = 720
 indent = 16
 rows = 5
 
+[YandexWeatherBlock]
+updatetime = 15
+regionid = 213
+lat = 55.725284
+lon = 37.573484
+folder = weather
+iconscale = (220,220)
+iconpos = (0,0)
+weathertypepos = (260,242)
+temperaturepos = (240,50)
+humiditypos = (620,98)
+pressurepos = (620,170)
+windpos = (620,26)
+weathertypefontname = Helvetica
+weathertypefontsize = 64
+weathertypefontbold = 1
+weathertypefontitalic = 0
+temperaturefontname = Helvetica
+temperaturefontsize = 160
+temperaturefontbold = 1
+temperaturefontitalic = 0
+humidityfontname = Helvetica
+humidityfontsize = 64
+humidityfontbold = 0
+humidityfontitalic = 0
+pressurefontname = Helvetica
+pressurefontsize = 64
+pressurefontbold = 0
+pressurefontitalic = 0
+windfontname = Helvetica
+windfontsize = 64
+windfontbold = 0
+windfontitalic = 0
