--- a/setting.ini
+++ b/setting.ini
@@ -14,8 +14,8 @@ file = /home/pi/DashBoard/music/happy three frend.mp3
 [CalendarBlock]
 fontname = Helvetica
 fontsize = 120
-fontbold = 1
-fontitalic = 0
+fontbold = True
+fontitalic = False
 position = 80
 
 [MT8057Block]
@@ -25,12 +25,12 @@ warncolor = (255, 255, 0)
 critcolor = (255, 63, 63)
 co2fontname = Helvetica
 co2fontsize = 100
-co2fontbold = 1
-co2fontitalic = 0
+co2fontbold = True
+co2fontitalic = False
 tempfontname = Helvetica
 tempfontsize = 100
-tempfontbold = 1
-tempfontitalic = 0
+tempfontbold = True
+tempfontitalic = False
 co2pos = (52,32)
 temppos = (130,180)
 
@@ -38,7 +38,7 @@ temppos = (130,180)
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = YandexWeather, Time
+blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -86,34 +86,34 @@ pressurepos = (620,170)
 windpos = (620,26)
 weathertypefontname = Helvetica
 weathertypefontsize = 64
-weathertypefontbold = 1
-weathertypefontitalic = 0
+weathertypefontbold = True
+weathertypefontitalic = False
 temperaturefontname = Helvetica
 temperaturefontsize = 160
-temperaturefontbold = 1
-temperaturefontitalic = 0
+temperaturefontbold = True
+temperaturefontitalic = False
 humidityfontname = Helvetica
 humidityfontsize = 64
-humidityfontbold = 0
-humidityfontitalic = 0
+humidityfontbold = False
+humidityfontitalic = False
 pressurefontname = Helvetica
 pressurefontsize = 64
-pressurefontbold = 0
-pressurefontitalic = 0
+pressurefontbold = False
+pressurefontitalic = False
 windfontname = Helvetica
 windfontsize = 64
-windfontbold = 0
-windfontitalic = 0
+windfontbold = False
+windfontitalic = False
 
 [SwapBlock]
 updatetime = 10
-blocklist = WunderGround, Calendar, MT8057
+blocklist = Calendar, MT8057, YandexWeather
 
 [TimeBlock]
 fontname = Helvetica
 fontsize = 384
-fontbold = 1
-fontitalic = 0
+fontbold = True
+fontitalic = False
 
 [VoiceBlock]
 speaker = omazh
@@ -140,30 +140,30 @@ pressurepos = (620,170)
 windpos = (620,26)
 weathertypefontname = Helvetica
 weathertypefontsize = 64
-weathertypefontbold = 1
-weathertypefontitalic = 0
+weathertypefontbold = True
+weathertypefontitalic = False
 temperaturefontname = Helvetica
 temperaturefontsize = 160
-temperaturefontbold = 1
-temperaturefontitalic = 0
+temperaturefontbold = True
+temperaturefontitalic = False
 humidityfontname = Helvetica
 humidityfontsize = 64
-humidityfontbold = 0
-humidityfontitalic = 0
+humidityfontbold = False
+humidityfontitalic = False
 pressurefontname = Helvetica
 pressurefontsize = 64
-pressurefontbold = 0
-pressurefontitalic = 0
+pressurefontbold = False
+pressurefontitalic = False
 windfontname = Helvetica
 windfontsize = 64
-windfontbold = 0
-windfontitalic = 0
+windfontbold = False
+windfontitalic = False
 
 [YandexNewsBlock]
 fontname = Helvetica
 fontsize = 34
-fontbold = 0
-fontitalic = 0
+fontbold = False
+fontitalic = False
 url = https://news.yandex.ru/index.rss
 updatetime = 15
 position = 720
@@ -185,21 +185,22 @@ pressurepos = (620,170)
 windpos = (620,26)
 weathertypefontname = Helvetica
 weathertypefontsize = 64
-weathertypefontbold = 1
-weathertypefontitalic = 0
+weathertypefontbold = True
+weathertypefontitalic = False
 temperaturefontname = Helvetica
 temperaturefontsize = 160
-temperaturefontbold = 1
-temperaturefontitalic = 0
+temperaturefontbold = True
+temperaturefontitalic = False
 humidityfontname = Helvetica
 humidityfontsize = 64
-humidityfontbold = 0
-humidityfontitalic = 0
+humidityfontbold = False
+humidityfontitalic = False
 pressurefontname = Helvetica
 pressurefontsize = 64
-pressurefontbold = 0
-pressurefontitalic = 0
+pressurefontbold = False
+pressurefontitalic = False
 windfontname = Helvetica
 windfontsize = 64
-windfontbold = 0
-windfontitalic = 0
+windfontbold = False
+windfontitalic = False
+
