--- a/setting.ini
+++ b/setting.ini
@@ -38,7 +38,7 @@ temppos = (130,180)
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Watcher, Time, Swap, YandexNews, Voice, Alarm
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -68,8 +68,8 @@ backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
 
 [SCHEMA_NIGHT_2]
-starttime = 23:00:00
-idletime = 1
+starttime = 22:00:00
+idletime = 3
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
 
