--- a/setting.ini
+++ b/setting.ini
@@ -18,6 +18,8 @@ fontbold = True
 fontitalic = False
 position = 80
 
+[IRBlock]
+
 [MT8057Block]
 warn = 800
 crit = 1200
@@ -38,7 +40,7 @@ temppos = (130,180)
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, IR
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
