--- a/setting.ini
+++ b/setting.ini
@@ -19,6 +19,16 @@ fontitalic = False
 position = 80
 
 [IRBlock]
+KEY_0 = Swap, Next
+KEY_1 = Voice
+KEY_2 = Voice
+KEY_3 = Voice
+KEY_4 = Voice
+KEY_5 = Voice
+KEY_6 = Voice
+KEY_7 = Voice
+KEY_8 = Voice
+KEY_9 = Voice
 
 [MT8057Block]
 warn = 800
