--- a/setting.ini
+++ b/setting.ini
@@ -19,16 +19,16 @@ fontitalic = False
 position = 80
 
 [IRBlock]
-KEY_0 = Swap, Next
-KEY_1 = Voice
-KEY_2 = Voice
-KEY_3 = Voice
-KEY_4 = Voice
-KEY_5 = Voice
-KEY_6 = Voice
-KEY_7 = Voice
-KEY_8 = Voice
-KEY_9 = Voice
+key_0 = Voice,
+key_1 = Voice,
+key_2 = Voice,
+key_3 = Voice,
+key_4 = Voice,
+key_5 = Voice,
+key_6 = Voice,
+key_7 = Voice,
+key_8 = Voice,
+key_9 = Voice,
 
 [MT8057Block]
 warn = 800
