--- a/setting.ini
+++ b/setting.ini
@@ -1,5 +1,5 @@
 [AlarmBlock]
-list = Alarm1
+list = Alarm1, Alarm2
 blocklist = Time, Swap, YandexNews
 
 [Alarm1]
@@ -10,6 +10,15 @@ duration = 30
 backgroundcolor = (255, 0, 0)
 foregroundcolor = (255, 255, 255)
 file = /home/pi/DashBoard/music/happy three frend.mp3
+
+[Alarm2]
+type = 4
+time = 08:05:00
+weekday = 0, 1, 2, 3, 4
+duration = 30
+backgroundcolor = (0, 0, 0)
+foregroundcolor = (0, 0, 0)
+module = Voice
 
 [CalendarBlock]
 fontname = Helvetica
