--- a/setting.ini
+++ b/setting.ini
@@ -35,6 +35,8 @@ key_6 = Voice,
 key_7 = Voice,
 key_8 = Voice,
 key_9 = Voice,
+key_channeldown = Swap,-1
+key_channelup = Swap,1
 
 [MT8057Block]
 warn = 800
