--- a/IR.ini
+++ b/IR.ini
@@ -58,3 +58,15 @@ begin
 	config=KEY_9
 	repeat=0
 end
+begin
+	prog=dashboard
+	button=KEY_CHANNELDOWN
+	config=KEY_CHANNELDOWN
+	repeat=0
+end
+begin
+	prog=dashboard
+	button=KEY_CHANNELUP
+	config=KEY_CHANNELUP
+	repeat=0
+end
