--- a/setting.ini
+++ b/setting.ini
@@ -1,5 +1,5 @@
 [AlarmBlock]
-list = Alarm1, Alarm2
+list = Alarm1, Alarm2, destghswetgeswtg
 blocklist = Time, Swap, YandexNews
 
 [Alarm1]
@@ -16,6 +16,14 @@ type = 4
 time = 07:25:00
 weekday = 0, 1, 2, 3, 4
 module = Voice
+
+[destghswetgeswtg]
+type = 5
+time = 22:10:00
+weekday = 0, 1, 2, 3, 6
+backgroundcolor = (200, 0, 0)
+foregroundcolor = (255, 255, 255)
+text = yhewyh4e6ye456y4e
 
 [CalendarBlock]
 fontname = Helvetica
