--- a/setting.ini
+++ b/setting.ini
@@ -1,5 +1,5 @@
 [AlarmBlock]
-list = Alarm1, Alarm2, destghswetgeswtg
+list = Alarm1, Alarm2, AlarmElectroScooter
 blocklist = Time, Swap, YandexNews
 
 [Alarm1]
@@ -15,15 +15,17 @@ file = /home/pi/DashBoard/music/happy three frend.mp3
 type = 4
 time = 07:25:00
 weekday = 0, 1, 2, 3, 4
+duration = 5
 module = Voice
 
-[destghswetgeswtg]
+[AlarmElectroScooter]
 type = 5
-time = 22:10:00
+time = 22:00:00
 weekday = 0, 1, 2, 3, 6
+duration = 5
 backgroundcolor = (200, 0, 0)
-foregroundcolor = (255, 255, 255)
-text = yhewyh4e6ye456y4e
+foregroundcolor = (57, 249, 115)
+text = Поставить на зарядку электросамокат, поставить на зарядку электросамокат, поставить на зарядку электросамокат
 
 [CalendarBlock]
 fontname = Helvetica
