--- a/setting.ini
+++ b/setting.ini
@@ -1,8 +1,8 @@
 [AlarmBlock]
-list = Alarm1, Alarm2, AlarmElectroScooter
+list = AlarmWork, AlarmVoice, AlarmElectroScooter
 blocklist = Time, Swap, YandexNews
 
-[Alarm1]
+[AlarmWork]
 type = 3
 time = 07:20:00
 weekday = 0, 1, 2, 3, 4
@@ -11,7 +11,7 @@ backgroundcolor = (255, 0, 0)
 foregroundcolor = (255, 255, 255)
 file = /home/pi/DashBoard/music/happy three frend.mp3
 
-[Alarm2]
+[AlarmVoice]
 type = 4
 time = 07:25:00
 weekday = 0, 1, 2, 3, 4
@@ -25,7 +25,7 @@ weekday = 0, 1, 2, 3, 6
 duration = 5
 backgroundcolor = (200, 0, 0)
 foregroundcolor = (57, 249, 115)
-text = Поставить на зарядку электросамокат, поставить на зарядку электросамокат, поставить на зарядку электросамокат
+text = Поставь на зарядку электросамокат
 
 [CalendarBlock]
 fontname = Helvetica
@@ -86,19 +86,19 @@ backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
 
 [SCHEMA_DAY]
-starttime = 10:00:00
+starttime = 09:00:00
 idletime = 30
 backgroundcolor = (10, 210, 210)
 foregroundcolor = (255, 255, 255)
 
 [SCHEMA_EVENING]
-starttime = 18:00:00
+starttime = 19:00:00
 idletime = 10
 backgroundcolor = (59, 94, 128)
 foregroundcolor = (255, 255, 255)
 
 [SCHEMA_NIGHT_2]
-starttime = 22:00:00
+starttime = 23:00:00
 idletime = 3
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (63, 63, 63)
@@ -153,7 +153,7 @@ blocklist = Time, Swap, YandexNews
 [WatcherBlock]
 weekday = 0, 1, 2, 3, 4
 starttime = 09:00:00
-finishtime = 20:00:00
+finishtime = 19:00:00
 updatetime = 60
 path = bash /home/pi/DashBoard/webcam.sh
 
