--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,16 @@
 [pytest]
 markers =
     block_alarm: block_alarm
+	block_calendar: block_calendar
+	block_ir: block_ir
+	block_mt8057: block_mt8057
+	block_openweathermap: block_openweathermap
+	block_swap: block_swap
+	block_time: block_time
+	block_voice: block_voice
+	block_watcher: block_watcher
+	block_wunderground: block_wunderground
+	block_yandex_news: block_yandex_news
+	block_yandex_weather: block_yandex_weather
+
+norecursedirs = weather music .github .vs __pycache__ .pytest_cache
