--- a/pytest.ini
+++ b/pytest.ini
@@ -14,3 +14,8 @@ markers =
 	block_yandex_weather: block_yandex_weather
 
 norecursedirs = weather music .github .vs __pycache__ .pytest_cache
+
+testpaths = test
+
+xfail_strict = true
+
