--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,5 +36,16 @@ jobs:
       run: |
         echo Deployment
         echo $OPENWEATHER_KEY
+        echo $HOME
+        echo $GITHUB_WORKFLOW
+        echo $GITHUB_ACTION
+        echo $GITHUB_ACTIONS
         echo $GITHUB_ACTOR
-        echo $GITHUB_WORKSPACE        
+        echo $GITHUB_REPOSITORY
+        echo $GITHUB_EVENT_NAME
+        echo $GITHUB_EVENT_PATH
+        echo $GITHUB_WORKSPACE
+        echo $GITHUB_SHA
+        echo $GITHUB_REF
+        echo $GITHUB_HEAD_REF
+        echo $GITHUB_BASE_REF  
