--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -33,8 +33,7 @@ jobs:
         OPENWEATHER_KEY: ${{secrets.OPENWEATHER_KEY}}
         WUNDERGROUND_KEY: ${{secrets.WUNDERGROUND_KEY}}
         YANDEX_VOICE_KEY: ${{secrets.YANDEX_VOICE_KEY}}
-        GITHUB_TOKENS: ${{secrets.TOKEN}}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  
       run: |
         echo Deployment
         # Ensure that the GITHUB_TOKEN secret is included
@@ -42,7 +41,7 @@ jobs:
           echo "Set the GITHUB_TOKEN env variable."
           exit 1
         fi
-        echo $GITHUB_TOKEN
+        # echo $GITHUB_TOKEN
         echo $OPENWEATHER_KEY
         echo $WUNDERGROUND_KEY
         echo $YANDEX_VOICE_KEY
