--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -60,6 +60,8 @@ jobs:
         echo $GITHUB_BASE_REF
         rm -rf distr
         mkdir distr
+        git config --global user.email "ikozin@yandex.ru"
+        git config --global user.name "ikozin"
         git add distr -f .gitignore
         git commit -m distr
         git push
