--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -60,8 +60,10 @@ jobs:
         echo $GITHUB_BASE_REF
         rm -rf distr
         mkdir distr
+        echo test > distr/test.txt
+        git init
         git config --global user.email "ikozin@yandex.ru"
         git config --global user.name "ikozin"
-        git add . -f .gitignore
+        git add distr -f .gitignore
         git commit -m distr
         git push origin master
