--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -60,10 +60,11 @@ jobs:
         echo $GITHUB_BASE_REF
         rm -rf distr
         mkdir distr
-        echo test > distr/test.txt
+        cd distr
+        echo test > test.txt
         # git init
         git config --global user.email "ikozin@yandex.ru"
         git config --global user.name "ikozin@yandex.ru"
-        git add distr -f .gitignore
+        git add .
         git commit -m distr
         git push origin HEAD
