--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -42,22 +42,22 @@ jobs:
           exit 1
         fi
         # echo $GITHUB_TOKEN
-        echo $OPENWEATHER_KEY
-        echo $WUNDERGROUND_KEY
-        echo $YANDEX_VOICE_KEY
-        echo $HOME
-        echo $GITHUB_WORKFLOW
-        echo $GITHUB_ACTION
-        echo $GITHUB_ACTIONS
-        echo $GITHUB_ACTOR
-        echo $GITHUB_REPOSITORY
-        echo $GITHUB_EVENT_NAME
-        echo $GITHUB_EVENT_PATH
-        echo $GITHUB_WORKSPACE
-        echo $GITHUB_SHA
-        echo $GITHUB_REF
-        echo $GITHUB_HEAD_REF
-        echo $GITHUB_BASE_REF
+        # echo $OPENWEATHER_KEY
+        # echo $WUNDERGROUND_KEY
+        # echo $YANDEX_VOICE_KEY
+        # echo $HOME
+        # echo $GITHUB_WORKFLOW
+        # echo $GITHUB_ACTION
+        # echo $GITHUB_ACTIONS
+        # echo $GITHUB_ACTOR
+        # echo $GITHUB_REPOSITORY
+        # echo $GITHUB_EVENT_NAME
+        # echo $GITHUB_EVENT_PATH
+        # echo $GITHUB_WORKSPACE
+        # echo $GITHUB_SHA
+        # echo $GITHUB_REF
+        # echo $GITHUB_HEAD_REF
+        # echo $GITHUB_BASE_REF
         rm -rf distr
         mkdir distr
         cd distr
