--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -63,8 +63,8 @@ jobs:
         cd distr
         echo test > test.txt
         # git init
-        git config --global user.email "ikozin@yandex.ru"
-        git config --global user.name "ikozin@yandex.ru"
+        git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git config --local user.name  "${GITHUB_ACTOR}"
         git add .
         git commit -m distr
         git push origin HEAD
