--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -58,14 +58,14 @@ jobs:
         # echo $GITHUB_REF
         # echo $GITHUB_HEAD_REF
         # echo $GITHUB_BASE_REF
+        git init
+        git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git config --local user.name  "${GITHUB_ACTOR}"
+        git checkout -b "master"
         rm -rf distr
         mkdir distr
         cd distr
         echo test > test.txt
-        # git init
-        # git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        # git config --local user.name  "${GITHUB_ACTOR}"
-        # git checkout -b "master"
         echo git add .
         git add .
         echo git commit -m "distr"
