--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -46,29 +46,52 @@ jobs:
         # echo $WUNDERGROUND_KEY
         # echo $YANDEX_VOICE_KEY
         # echo $HOME
-        # echo $GITHUB_WORKFLOW
-        # echo $GITHUB_ACTION
-        # echo $GITHUB_ACTIONS
-        # echo $GITHUB_ACTOR
-        # echo $GITHUB_REPOSITORY
-        # echo $GITHUB_EVENT_NAME
-        # echo $GITHUB_EVENT_PATH
-        # echo $GITHUB_WORKSPACE
-        # echo $GITHUB_SHA
-        # echo $GITHUB_REF
-        # echo $GITHUB_HEAD_REF
-        # echo $GITHUB_BASE_REF
-        git init
-        git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git config --local user.name  "${GITHUB_ACTOR}"
-        git checkout -b "master"
-        rm -rf distr
-        mkdir distr
-        cd distr
-        echo test > test.txt
-        echo git add .
-        git add .
-        echo git commit -m "distr"
-        git commit -m "distr"
-        echo git push origin master
-        git push origin master
+        echo $GITHUB_WORKFLOW
+        echo $GITHUB_ACTION
+        echo $GITHUB_ACTIONS
+        echo $GITHUB_ACTOR
+        echo $GITHUB_REPOSITORY
+        echo $GITHUB_EVENT_NAME
+        echo $GITHUB_EVENT_PATH
+        echo $GITHUB_WORKSPACE
+        echo $GITHUB_SHA
+        echo $GITHUB_REF
+        echo $GITHUB_HEAD_REF
+        echo $GITHUB_BASE_REF
+        # git init
+        # git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        # git config --local user.name  "${GITHUB_ACTOR}"
+        # git checkout -b "master"
+        # rm -rf distr
+        # mkdir distr
+        # cd distr
+        # echo test > test.txt
+        # echo git add .
+        # git add .
+        # echo git commit -m "distr"
+        # git commit -m "distr"
+        # echo git push origin master
+        $git push origin master
+    - name: Build project # This would actually build your project, using zip for an example artifact
+      run: |
+        zip --junk-paths my-artifact README.md
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: true
+        prerelease: true
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ./my-artifact.zip
+        asset_name: my-artifact.zip
+        asset_content_type: application/zip
