--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -82,8 +82,8 @@ jobs:
         asset_name: my-artifact.zip
         asset_content_type: application/zip
     - name: upload-artifact
-    - run: echo hello > path/to/artifact/world.txt
-    - uses: actions/upload-artifact@v1
+      run: echo hello > path/to/artifact/world.txt
+      uses: actions/upload-artifact@v1
       with:
         name: my-artifact
         path: path/to/artifact
