--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -82,8 +82,9 @@ jobs:
         asset_name: my-artifact.zip
         asset_content_type: application/zip
     - name: upload-artifact
-    - run: mkdir -p path/to/artifact
-    - run: echo hello > path/to/artifact/world.txt
+      run: |
+        mkdir -p path/to/artifact
+        echo hello > path/to/artifact/world.txt
     - uses: actions/upload-artifact@v1
       with:
         name: my-artifact
