--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -37,10 +37,10 @@ jobs:
       run: |
         echo Deployment
         # Ensure that the GITHUB_TOKEN secret is included
-        if [[ -z "$GITHUB_TOKEN" ]]; then
-          echo "Set the GITHUB_TOKEN env variable."
-          exit 1
-        fi
+        # if [[ -z "$GITHUB_TOKEN" ]]; then
+        #   echo "Set the GITHUB_TOKEN env variable."
+        #   exit 1
+        # fi
         # echo $GITHUB_TOKEN
         # echo $OPENWEATHER_KEY
         # echo $WUNDERGROUND_KEY
