--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Build project # This would actually build your project, using zip for an example artifact
       run: |
         # zip --junk-paths my-artifact README.md
-        zip build -r ext modules music weather "*.py" "*.ini" "*.sh" "*.mp3" "*.png" ".gif"
+        zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.mp3" "*.png" ".gif"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.0.0
