--- a/setting.ini
+++ b/setting.ini
@@ -105,7 +105,7 @@ foregroundcolor = (63, 63, 63)
 
 [OpenWeatherMapBlock]
 updatetime = 15
-key = b5561ca2d2e87158e97b7333779623f8
+key = <OPENWEATHERMAP_KEY>
 folder = weather
 iconscale = (256,256)
 iconpos = (0,0)
@@ -147,7 +147,7 @@ fontitalic = False
 
 [VoiceBlock]
 speaker = omazh
-key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
+key = <YANDEXVOICE_KEY>
 blocklist = Time, Swap, YandexNews
 
 [WatcherBlock]
@@ -159,7 +159,7 @@ path = bash /home/pi/DashBoard/webcam.sh
 
 [WunderGroundBlock]
 updatetime = 15
-key = 37caca524bc00656
+key = <WUNDERGROUND_KEY>
 folder = weather
 iconscale = (220,220)
 iconpos = (0,0)
