--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -66,8 +66,8 @@ jobs:
       run: |
         # zip --junk-paths my-artifact README.md
         sed -i -e 's/<OPENWEATHERMAP_KEY>/'${OPENWEATHER_KEY}'/g' setting.ini
-        # sed -i -e 's/<YANDEXVOICE_KEY/$YANDEX_VOICE_KEY/g' setting.ini
-        # sed -i -e 's/<WUNDERGROUND_KEY/$WUNDERGROUND_KEY/f' setting.ini
+        sed -i -e 's/<YANDEXVOICE_KEY/'{$YANDEX_VOICE_KEY}'/g' setting.ini
+        sed -i -e 's/<WUNDERGROUND_KEY/'${WUNDERGROUND_KEY}'/g' setting.ini
         zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.mp3" "*.png" ".gif"
     - name: Create Release
       id: create_release
