--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -68,6 +68,9 @@ jobs:
         sed -i -e 's/<OPENWEATHERMAP_KEY>/'${OPENWEATHER_KEY}'/g' setting.ini
         sed -i -e 's/<YANDEXVOICE_KEY>/'{$YANDEX_VOICE_KEY}'/g' setting.ini
         sed -i -e 's/<WUNDERGROUND_KEY>/'${WUNDERGROUND_KEY}'/g' setting.ini
+        sed -i -e 's/<OPENWEATHERMAP_KEY>/'${OPENWEATHER_KEY}'/g' setting_opiwin.ini
+        sed -i -e 's/<YANDEXVOICE_KEY>/'{$YANDEX_VOICE_KEY}'/g' setting_opiwin.ini
+        sed -i -e 's/<WUNDERGROUND_KEY>/'${WUNDERGROUND_KEY}'/g' setting_opiwin.ini
         zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.mp3" "*.png" ".gif" -x test/*
     - name: Create Release
       id: create_release
